<resources>
    <string name="app_name">Treadmill</string>
    <string name="company_name">深圳沃锐科技有限公司</string>
    <string name="shortcut_run">Intelligent running</string>
    <string name="shortcut_movie">Media</string>
    <string name="shortcut_apps">Application</string>
    <string name="shortcut_settings">Settings</string>
    <string name="shortcut_scene">Scene</string>
    <string name="shortcut_photo">Picture</string>
    <string name="shortcut_video">Local video</string>
    <string name="shortcut_music">Local music</string>
    <string name="shortcut_config">Running score</string>
    <string name="WiFi">WiFi</string>
    <string name="user">User</string>
    <string name="user_info">User info</string>
    <string name="user5">user5</string>
    <string name="user4">user4</string>
    <string name="user3">user3</string>
    <string name="user2">user2</string>
    <string name="user1">user1</string>
    <string name="oper_start">start</string>
    <string name="oper_stop">stop</string>
    <string name="oper_stoping">stopping</string>
    <string name="running_time">The total length of running</string>
    <string name="average_velocity">Average velocity</string>
    <string name="Mean_heart_rate">Average heart rate</string>
    <string name="shortcut_manual">Manual mode</string>
    <string name="shortcut_countdown">Reciprocal mode</string>
    <string name="shortcut_countdown_time">Time pattern</string>
    <string name="shortcut_distance">Distance model</string>
    <string name="strength">Strength</string>
    <string name="boy">male</string>
    <string name="girl">female</string>
    <string name="shortcut_calorie">Calorie model</string>
    <string name="shortcut_program">Program model</string>
    <string name="shortcut_fatloss">Custom mode</string>
    <string name="shortcut_fatloss1">Custom mode1</string>
    <string name="shortcut_fatloss2">Custom mode2</string>
    <string name="shortcut_fatloss3">Custom mode3</string>
    <string name="shortcut_fatloss4">Custom mode4</string>
    <string name="shortcut_fatloss5">Custom mode5</string>
    <string name="shortcut_rate">Heart rate model</string>
    <string name="shortcut_map">Running mileage</string>
    <string name="param_slope">Slope</string>
    <string name="param_rate">Heart rate</string>
    <string name="param_time">Time</string>
    <string name="param_distance">Distance</string>
    <string name="param_calorie">Calorie</string>
    <string name="param_speed">Speed</string>
    <string name="unit_distance">Km</string>
    <string name="Kilometers_per_hour">Km/h</string>
    <string name="hms">Seconds/km</string>
    <string name="unit_calorie">Kcal</string>
    <string name="Kcal_per_hour">%</string>
    <string name="unit_age">Year</string>
    <string name="unit_time">Minute</string>
    <string name="Times_per_minute">BPM</string>
    <string name="shortcut_recover">System information</string>
    <string name="activity_not_found">"This application is not installed."</string>
    <string name="format_status_speed">System configuration\nCPU : ARM Cortex-A7\nGPU : Mali400MP2</string>
    <string name="banben">Edition : </string>
    <string name="suoyou">深圳市沃锐科技有限公司版权所有</string>
    <string name="oper_ok">Preservation</string>
    <string name="signal_strength">Signal intensity</string>
    <string name="security_level">Security</string>
    <string name="password">Password</string>
    <string name="show_password">Display password</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Forget</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Determine</string>
    <string name="conn_status">Connection state</string>
    <string name="ip_address">IP address</string>
    <string name="oper_back">Cancel</string>
    <string name="Burn_calories">Burn calories</string>
    <string name="Average_calorie_consumption">Pace</string>
    <string name="title_activity_map">Personal information</string>
    <string name="label_manual">Name:</string>
    <string name="label_marathon">weight kg:</string>
    <string name="weight">weight:</string>
    <string name="label_r01">Height cm:</string>
    <string name="height">Height:</string>
    <string name="label_r02">Age:</string>
    <string name="label_r05">Age</string>
    <string name="label_r03">Model one</string>
    <string name="label_r04">Mode two</string>
    <string name="level_beginner">Mode three</string>
    <string name="level_intermediate">Mode four</string>
    <string name="level_advanced">Mode five</string>
    <string name="level_expert">Target heart rate</string>
    <string name="program_f01">Warm-up</string>
    <string name="program_f02">Aerobic exercise</string>
    <string name="program_f03">Reduces the fat movement</string>
    <string name="program_f04">Health Campaign</string>
    <string name="program_r01">alpinism</string>
    <string name="program_r02">Professional sports</string>
    <string name="label_guide_title">Easy operation manual</string>
    <string name="label_note">Matters needing attention</string>
    <string name="label_guide">Operating instructions</string>
    <string name="conten_note">1.this system strives to ensure the stability and fluency of treadmill running. \n\n2. treadmill should be placed in a ventilated dry place, to prevent water, oil pollution and other liquid contamination. \n\n3. on touch screens: avoid proximity to magnets and horns with magnets. Avoid sharp objects sliding on the touch panel surface to avoid water, grease, and any other conductive liquids or solids. \n\n4. found that if the system is not running smoothly, it may install irregular APK applications, should be regularly managed and cleared of these apk.</string>
    <string name="conten_guide">5. after the whole machine is powered on, wait for the system to start for about 30 seconds. After the \n\n6. startup is complete, the system enters the main interface. By touching the "smart running", you can enter the smart running interface. \n\n7. has 7 modes for users to select: manual mode, time countdown mode, distance reciprocal mode, calorie countdown mode, program mode, custom mode, and heart rate mode.</string>
    <string name="lii">\n4. each movement is completed, the movement record can be shared, this should be preloaded with the corresponding apk applications. </string>
    <string name="label_error_title">Error code query</string>
    <string name="error_code">Code</string>
    <string-array name="error_name">
        <item>Communication error(System)</item>
        <item>E02\nExplosion protection protect</item>
        <item>Speed-sensor no signal</item>
        <item>E04\nSlopes learning failed</item>
        <item>E05\nOvercurrent protection</item>
        <item>Driver or Motor error</item>
        <item>E08\nSafety lock</item>
        <item>E09\nUnder voltage protection</item>
        <item>Over voltage protection</item>
        <item>E01\nThe electronic watch is out of communication with the controller</item>
        <item>Communication error(APP-System)</item>
        <item>Hall sensor no signal</item>
        <item>Controller inner communication error</item>
        <item>Over heated</item>
        <item>Internal voltage check error</item>
        <item>Severe over current</item>
        <item>Communication error</item>
    </string-array>
    <string name="error_handle">Troubleshooting</string>
    <string name="info_title">Native information</string>
    <string name="label_info_version1">Device version number 1:</string>
    <string name="label_info_version2">Device version number 2:</string>
    <string name="label_info_mileage">Total mileage:</string>
    <string name="label_config_unit">Unit settings</string>
    <string name="config_language">Language settings</string>
    <string name="switchover_language">Language switch</string>
    <string name="label_unit_inches">Inch</string>
    <string name="label_unit_metric">Metric</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="switch_language">Language</string>
    <string name="memory_space">Storage space\nTotal memory: 8GB\nSystem takes up memory:</string>
    <string name="useable_user">GB\nUsers can use memory:</string>
    <string name="been_used">GB(Has been used:</string>
    <string name="remaining_GB">GB, Surplus:</string>
    <string name="remaining_MB">MB, Surplus:</string>
    <string name="GB">GB)</string>
    <string-array name="error_names">
        <item>Communication error(System)</item>
        <item>Motor not connected</item>
        <item>Speed-sensor no signal</item>
        <item>Lifting-Motor is calibrating</item>
        <item>Over current protection</item>
        <item>Driver or Motor error</item>
        <item>Safety-key fall</item>
        <item>Under voltage protection</item>
        <item>Over voltage protection</item>
        <item>Communication error(Controller)</item>
        <item>Communication error(APP-System)</item>
        <item>Hall sensor no signal</item>
        <item>Controller inner communication error</item>
        <item>Over heated</item>
        <item>Internal voltage check error</item>
        <item>Severe over current</item>
        <item>Communication error</item>
    </string-array>
    <string-array name="error_msgs">
        <item>Please check and confirm the connect of Console and Driver, if these connect wires were damaged please replace these wires.</item>
        <item>Check Motor Wires connected the Driver.</item>
        <item>Check Speed-Sensor is installed correctly, if the Speed-Sensor is damaged, replace it.</item>
        <item>This error will disappear calibration.</item>
        <item>If Belt is too tight,or the Belt need add.</item>
        <item>Driver is damaged or not, if damaged replace. If odor of Motor is strange,replace the Motor.</item>
        <item>Put the Safety-Key onto the right area</item>
        <item>Please connect Console wires tightly</item>
        <item>Please contact with the Vendor.</item>
        <item>Please check and confirm the connect of Console and Driver.</item>
        <item>Please contact with the Vendor.</item>
        <item>Please contact with the Vendor.</item>
        <item>Please contact with the Vendor.</item>
        <item>Please contact with the Vendor.</item>
        <item>Please contact with the Vendor.</item>
        <item>Please contact with the Vendor.</item>
        <item></item>
    </string-array>
    <string name="time">Time</string>
    <string name="mileage">Distance</string>
    <string name="heat">Quantity of heat</string>
    <string name="preinstall">Preset program</string>
    <string name="custom">Custom</string>
    <string name="isrecover">Restore system?</string>
    <string name="prompt_refueling">In order to improve the life of your treadmill, please refuel in time!!!</string>
    <string name="announcements">Note: \n each refueling amount of 10ML\n, if you have refueling, according to confirm \n press cancel, then the next boot to continue to remind</string>
    <string name="engineering_mode">Engineering model</string>
    <string name="order_number">Serial number</string>
    <string name="number">Number</string>
    <string name="maintenance_tips">Maintenance Tips</string>
</resources>