<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/my600dp"
    android:layout_height="@dimen/my260dp"
    android:background="@drawable/shape_language"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/my15dp"
        android:gravity="center_vertical"
        android:text="@string/switchover_language"
        android:textColor="@android:color/white"
        android:textSize="@dimen/my40dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/my1dp"
        android:layout_marginBottom="@dimen/my15dp"
        android:layout_marginTop="@dimen/my10dp"
        android:background="@android:color/white" />


    <TextView
        android:id="@+id/language_tv_chinese"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my80dp"
        android:layout_marginLeft="@dimen/my20dp"
        android:text="@string/chinese"
        android:textColor="@android:color/white"
        android:textSize="@dimen/my35dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/my1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/language_tv_english"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my80dp"
        android:layout_marginLeft="@dimen/my20dp"
        android:text="@string/english"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="@dimen/my35dp" />
</LinearLayout>