<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/my700dp"
    android:layout_height="wrap_content"
    android:background="#312d2d"
    android:orientation="vertical">

    <include layout="@layout/dialog_user_info1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#da1b29" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/my15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_manual"
            android:textColor="@android:color/white"
            android:textSize="@dimen/my30dp"/>

        <EditText
            android:id="@+id/userInfo_ed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_user_edit_frame"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/user_character"
            android:textSize="@dimen/my28dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_r01"
            android:textColor="@android:color/white"
            android:textSize="@dimen/my30dp"/>

        <EditText
            android:id="@+id/userInfo_ed_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_user_edit_frame"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/user_character"
            android:textSize="@dimen/my30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/my15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_r02"
            android:textColor="@android:color/white"
            android:textSize="@dimen/my30dp"/>

        <EditText
            android:id="@+id/userInfo_ed_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_user_edit_frame"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/user_character"
            android:textSize="@dimen/my30dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_marathon"
            android:textColor="@android:color/white"
            android:textSize="@dimen/my30dp"/>

        <EditText
            android:id="@+id/userInfo_ed_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_user_edit_frame"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/user_character"
            android:textSize="@dimen/my30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a9a9a9"
        android:orientation="horizontal">
        <Button
            android:id="@+id/userInfo_btn_save"
            android:text="@string/oper_ok"
            style="@style/setting_userinfo"/>
        <Button
            android:id="@+id/userInfo_btn_cancel"
            style="@style/setting_userinfo"
            android:layout_marginLeft="@dimen/my2dp"
            android:text="@string/oper_back" />
    </LinearLayout>
</LinearLayout>